--- a/project.cv.html
+++ b/project.cv.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="top-section">
-      <h1>Tala Ali Alshiha</h1>
-      <p class="title">Computer Science Student at Shaqra University</p>
-      <img class="uni-logo" src="su.jpg" alt="Shaqra University Logo">
-      
+    <div class="container">
+        <div class="top-section">
+          <h1>Tala Ali Alshiha</h1>
+          <img class="uni-logo" src="su.jpg" alt="Shaqra University Logo">
+          <p class="title">Computer Science Student at Shaqra University</
+
 
     <div class="main-content">
       <h2>Education</h2>
@@ -33,6 +33,14 @@
           <td>General Education</td>
         </tr>
       </table>
+      <h2> Certifications</h2>
+<ul>
+  <li>Certified in multiple Cisco networking courses.</li>
+  <li>Certificate in Database Management using SQL.</li>
+  <li>Winner of a "Clean Code" competition certificate.</li>
+  <li>Participated in a Tech Expo.</li>
+  <li>Attended a Hackathon exhibition.</li>
+</ul>
 
       <h2>Skills</h2>
       <ul>
@@ -40,11 +48,11 @@
         <li>CSS</li>
         <li>Python</li>
         <li>Cybersecurity Basics</li>
-        <li>Content Writing</li>
+        <li>editor</li>
       </ul>
 
       <h2>Contact</h2>
-      <p>Phone: <a href="tel:+966501234567">+966 556848179</a></p>
+      <p>Phone: <a href="tel:+966501234567">+966 55 6848179</a></p>
       <p>Email: <a href="mailto:Tala.alshiha@gmail.com">Tala.alshiha@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/tala1ali" target="_blank">github.com/tala1ali</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/Tala-Ali-Al-shiha" target="_blank">linkedin.com/in/Tala-Ali-Al-shiha</a></p>
