--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="top-section">
           <h1>Tala Ali Alshiha</h1>
-<img class="uni-logo" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRK6jIVK2GeVROHO9TDcGgxVT-xOV2IbRtGZA&s alt="Shaqra University Logo">
+<img class="uni-logo" src="su.jpg" alt="Shaqra University Logo">
           <p class="title">Computer Science Student at Shaqra University</
 
 
